--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="The Greatest Luknight"
+      content="Arigathanks motherfucker, you will be missed."
     />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="%PUBLIC_URL%/social_media.png">
+    <meta property="og:title" content="The Greatest Luknight">
+    <meta property="og:description" content="Arigathanks motherfucker, you will be missed.">
+    <meta property="og:site_name" content="To the Strongest Luknight of the 4th Generation of Hololive">
+    <meta property="og:image" content="%PUBLIC_URL%/social_media.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>The Greatest Luknight </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
