Fixed embed image
Meta content can only be used with absolute paths, not relative.

--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
       content="Arigathanks motherfucker, you will be missed."
     />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="%PUBLIC_URL%/social_media.png">
+    <meta name="twitter:image" content="https://user-images.githubusercontent.com/46586720/122671761-bae93c80-d1b7-11eb-82b4-bc38397389dc.png">
     <meta property="og:title" content="The Greatest Luknight">
     <meta property="og:description" content="Arigathanks motherfucker, you will be missed.">
     <meta property="og:site_name" content="To the Strongest Luknight of the 4th Generation of Hololive">
-    <meta property="og:image" content="%PUBLIC_URL%/social_media.png">
+    <meta property="og:image" content="https://user-images.githubusercontent.com/46586720/122671761-bae93c80-d1b7-11eb-82b4-bc38397389dc.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
