--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="The Greatest Luknight"
       content="Arigathanks motherfucker, you will be missed."
@@ -15,7 +13,13 @@
     <meta property="og:description" content="Arigathanks motherfucker, you will be missed.">
     <meta property="og:site_name" content="To the Strongest Luknight of the 4th Generation of Hololive">
     <meta property="og:image" content="https://user-images.githubusercontent.com/46586720/122671761-bae93c80-d1b7-11eb-82b4-bc38397389dc.png">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#603cba">
+    <meta name="theme-color" content="#603cba">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
