--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="The Greatest Luknight"
+      name="The Strongest Luknight"
       content="Arigathanks motherfucker, you will be missed."
     />
     <meta name="twitter:card" content="summary_large_image">
@@ -34,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>The Greatest Luknight </title>
+    <title>The Strongest Luknight </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
