--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://user-images.githubusercontent.com/46586720/122671761-bae93c80-d1b7-11eb-82b4-bc38397389dc.png">
-    <meta property="og:title" content="The Greatest Luknight">
+    <meta property="og:title" content="The Strongest Luknight">
     <meta property="og:description" content="Arigathanks motherfucker, you will be missed.">
     <meta property="og:site_name" content="To the Strongest Luknight of the 4th Generation of Hololive">
     <meta property="og:image" content="https://user-images.githubusercontent.com/46586720/122671761-bae93c80-d1b7-11eb-82b4-bc38397389dc.png">
