--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
       name="The Strongest Luknight"
       content="Arigathanks motherfucker, you will be missed."
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,500&family=Noto+Sans+JP&display=block" rel="stylesheet">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://user-images.githubusercontent.com/46586720/122671761-bae93c80-d1b7-11eb-82b4-bc38397389dc.png">
     <meta property="og:title" content="The Strongest Luknight">
